--- a/public/evaluations_dashboard.html
+++ b/public/evaluations_dashboard.html
@@ -7,47 +7,40 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
-  <!-- تفعيل حالة التحميل مبكرًا -->
+  <!-- نُفعّل حالة التحميل مبكرًا -->
   <script>document.documentElement.classList.add('app-loading');</script>
 
   <style>
-    /* شاشة “جاري التحميل…” */
+    /* ================= شاشة التحميل ================= */
     #appLoader{
       position:fixed; inset:0; display:flex; align-items:center; justify-content:center;
       gap:.75rem; background:#ffffff; z-index:3000; font-weight:700; color:#333;
-      font-family:'Segoe UI',sans-serif;
     }
     html.app-ready #appLoader{ display:none; }
-
-    /* أثناء التحميل: أخفِ كل المحتوى */
+    /* أخفِ المحتوى أثناء التحميل فقط */
     html.app-loading #pageContent,
     html.app-loading #notAvailable,
     html.app-loading .toast-container{ display:none !important; }
 
+    /* ================= أساسيات ================= */
     body{background:#f8f9fa;font-family:'Segoe UI',sans-serif}
     .container-fluid{margin-top:30px}
-
     table{background:#fff;border-radius:10px;overflow:hidden;font-size:14px;width:100%;margin:auto}
-    th,td{ text-align:center; vertical-align:middle }
-
-    /* توحيد ستايل ترويسة الجدول (مطابق لصفحة الإدارة) */
-    th{
-      background:#f8f9fa; color:#000; font-weight:700;
-      padding:.75rem .5rem; line-height:1.25;
-    }
-    /* Sticky header مثل صفحة الإدارة */
-    #evaluationsTableWrapper thead{
-      position:sticky; top:0; z-index:100; background:#f8f9fa;
-    }
-    #evaluationsTableWrapper thead th{
-      position:sticky; top:0; z-index:101; background:#f8f9fa; color:#000;
-      box-shadow:0 1px 0 rgba(0,0,0,.06);
-    }
-
+    th,td{text-align:center;vertical-align:middle}
+    th{background:#f8f9fa;color:#000;font-weight:700}
     .highlight{background:#d4edda!important;transition:background-color 1s ease}
     .hidden-col{display:none!important}
     .filters{margin-bottom:20px;text-align:center}
     .sticky-header{background:#f8f9fa;padding-top:10px}
+
+    /* ترويسة لاصقة + ارتفاع أكبر مثل صفحة الإدارة */
+    #evaluationsTableWrapper thead{position:sticky;top:0;z-index:99;background:#f8f9fa}
+    #evaluationsTableWrapper thead th{
+      position:sticky; top:0; z-index:100; background:#f8f9fa; color:#000;
+      box-shadow:0 1px 0 rgba(0,0,0,.06);
+      padding-block: .85rem;           /* ↑ ارتفاع العناوين (شاشة) */
+      line-height:1.25;
+    }
 
     /* أعمدة التاريخ (اتجاه يسار لليمين) */
     #evaluationsTableWrapper th.date-col,
@@ -55,78 +48,74 @@
       direction:ltr;text-align:center;width:110px;max-width:110px
     }
 
-    /* مساحات معلومات أعلى الجدول (بالأسود كما طُلب) */
-    #completionRateContainer,#selectedVisitsContainer{
-      font-weight:bold;margin:5px 0;font-size:18px;color:#000;min-height:24px
-    }
+    /* مساحات معلومات أعلى الجدول */
+    #completionRateContainer,#selectedVisitsContainer{font-weight:bold;margin:5px 0;font-size:18px;color:#000;min-height:24px}
     #infoContainer{font-weight:bold;margin:15px 0;font-size:18px;color:#000;text-align:center}
 
     /* ملاحظات: ما يظهر على الشاشة/الطباعة */
     .notes-screen{display:inline-block}
     .print-notes{display:none;text-align:start}
 
-    /* تأثير Hover على صفوف الجدول — استهداف الخلايا */
-    #evaluationsTableWrapper tbody tr > * {
-      transition: background-color .2s ease, box-shadow .2s ease;
-    }
+    /* تأثير Hover على صفوف الجدول */
+    #evaluationsTableWrapper tbody tr > * {transition: background-color .2s ease, box-shadow .2s ease;}
     #evaluationsTableWrapper tbody tr:hover > * {
-      background-color:#f1f7ff !important;
-      box-shadow: inset 0 0 0 9999px rgba(13,110,253,.06);
+      background-color:#f1f7ff !important; box-shadow: inset 0 0 0 9999px rgba(13,110,253,.06);
     }
 
-    /* حالة "غير متوفر" */
-    #notAvailable{
-      min-height:60vh;
-      align-items:center; justify-content:center; text-align:center;
-    }
+    /* رسالة "غير متوفر" */
+    #notAvailable{min-height:60vh; align-items:center; justify-content:center; text-align:center;}
 
-    /* ======== تحسينات الطباعة ======== */
+    /* ==== تعيين أصناف عرض للأعمدة للنِسب (شاشة + طباعة) ==== */
+    th.col-idx, td.col-idx{width:3.5%}
+    th.col-college, td.col-college{width:9%}
+    th.col-committee, td.col-committee{width:20%}            /* اسم اللجنة */
+    th.col-date, td.col-date{width:8%}
+    th.col-consistency, td.col-consistency{width:13%}        /* التوافق بين الدعوات والاجتماعات */
+    th.col-notes, td[col-notes]{width:22%}                   /* الملاحظات */
+    /* الحقول الرقمية – نجعلها أضيق */
+    th.col-num, td.col-num{width:5%}
+
+    /* ================= الطباعة ================= */
     @media print{
-      /* اجعل الجدول يلتزم بالعرض ويمنع الانقسام قدر الإمكان */
-      @page{ size: A4 landscape; margin: 10mm; }
-      body{background:#fff}
+      @page{ size: A4 landscape; margin: 5mm; }
+
+      html,body{background:#fff}
       .no-print,.toast-container,.modal{display:none!important}
-      .container-fluid{max-width:none;width:100%;margin:0}
-      .print-header{display:block;margin-bottom:10px}
+      .container-fluid{margin-top:0; max-width:none; width:100%}
+      .print-header{display:block;margin-bottom:8px}
 
-      /* تكرار رأس الجدول في كل صفحة */
-      thead{ display:table-header-group }
-      tfoot{ display:table-footer-group }
-
-      /* منع انقسام الصف عبر الصفحات قدر الإمكان */
-      table{ table-layout:fixed; border-collapse:collapse; width:100%; }
-      tr{ page-break-inside: avoid; }
-      td,th{
+      /* استخدم تخطيط ثابت ليلتزم بعروض الأعمدة */
+      #evaluationsTableWrapper{ table-layout: fixed; width:100%; }
+      #evaluationsTableWrapper th, #evaluationsTableWrapper td{
+        font-size:12px; padding:.35rem .25rem; line-height:1.25;
         white-space:normal; overflow-wrap:anywhere; word-break:break-word;
-        padding:.45rem .35rem; /* تقليل بسيط لتناسب العرض */
-        font-size:12px; line-height:1.25;
+        writing-mode: horizontal-tb !important; text-orientation: mixed !important;
       }
 
-      /* إظهار نسخة الطباعة من الملاحظات */
+      /* تأكيد نسب الأعمدة في الطباعة */
+      th.col-committee, td.col-committee{width:20%}
+      th.col-consistency, td.col-consistency{width:13%}
+      th.col-notes, td[col-notes]{width:22%}
+      th.col-num, td.col-num{width:5%}
+      th.col-college, td.col-college{width:9%}
+      th.col-date, td.col-date{width:8%}
+      th.col-idx, td.col-idx{width:3.5%}
+
+      /* رأس الجدول يتكرر */
+      thead{display:table-header-group}
+
+      /* حاول منع انقسام الصف الواحد بين صفحتين */
+      tr{ page-break-inside: avoid; break-inside: avoid; }
+
+      /* إظهار محتوى الملاحظات للطباعة */
       .notes-screen{display:none!important}
       .print-notes{display:block!important;white-space:normal}
-
-      /* ضمان بقاء الأعمدة داخل الصفحة */
-      .col-college{width:12%}
-      .date-col{width:9%}
-      .col-formation_decision,
-      .col-work_plan,
-      .col-performance_indicators,
-      .col-meetings,
-      .col-consistency,
-      .col-coverage_books,
-      .col-report1,
-      .col-report2,
-      .col-report3,
-      .col-statistical_analysis{ width:5.5% }
-      #availabilityHeader, .availability-cell{ width:6% }
-      .col-notes{ width:18% }
     }
   </style>
 </head>
 <body>
 
-  <!-- شاشة “جاري التحميل…” -->
+  <!-- شاشة "جاري التحميل..." -->
   <div id="appLoader" aria-live="polite">
     <div class="spinner-border" role="status" aria-hidden="true"></div>
     <span>جاري التحميل…</span>
@@ -175,7 +164,7 @@
         </div>
       </div>
 
-      <!-- رأس الطباعة (سُيملأ ديناميكيًا) -->
+      <!-- رأس الطباعة -->
       <div id="infoContainer" class="print-header">
         <div id="semesterInfo">—</div>
         <div id="selectedVisitsContainer">—</div>
@@ -184,24 +173,26 @@
       </div>
     </div>
 
-    <table class="table table-bordered table-striped table-responsive" id="evaluationsTableWrapper">
+    <table class="table table-bordered table-striped" id="evaluationsTableWrapper">
       <thead>
         <tr>
-          <th>#</th>
+          <th class="col-idx">#</th>
           <th class="col-college">الكلية</th>
-          <th>اسم اللجنة</th>
-          <th class="date-col hidden-col">تاريخ التدقيق</th>
-          <th class="col-formation_decision">قرار التشكيل</th>
-          <th class="col-work_plan">خطة العمل</th>
-          <th class="col-performance_indicators">مؤشرات الأداء</th>
-          <th class="col-meetings">عدد الاجتماعات</th>
+          <th class="col-committee">اسم اللجنة</th>
+          <th class="date-col col-date hidden-col">تاريخ التدقيق</th>
+
+          <th class="col-num col-formation_decision">قرار التشكيل</th>
+          <th class="col-num col-work_plan">خطة العمل</th>
+          <th class="col-num col-performance_indicators">مؤشرات الأداء</th>
+          <th class="col-num col-meetings">عدد الاجتماعات</th>
           <th class="col-consistency">التوافق بين الدعوات والاجتماعات</th>
-          <th class="col-coverage_books">كتب التغطية</th>
-          <th class="col-report1">تقرير إنجاز 1</th>
-          <th class="col-report2">تقرير إنجاز 2</th>
-          <th class="col-report3">تقرير إنجاز 3</th>
-          <th class="col-statistical_analysis">التحليل الإحصائي</th>
-          <th id="availabilityHeader">درجة التوفر من (9)</th>
+          <th class="col-num col-coverage_books">كتب التغطية</th>
+          <th class="col-num col-report1">تقرير إنجاز 1</th>
+          <th class="col-num col-report2">تقرير إنجاز 2</th>
+          <th class="col-num col-report3">تقرير إنجاز 3</th>
+          <th class="col-num col-statistical_analysis">التحليل الإحصائي</th>
+
+          <th id="availabilityHeader" class="col-num">درجة التوفر من (9)</th>
           <th class="col-notes">الملاحظات</th>
         </tr>
       </thead>
@@ -258,6 +249,8 @@
       try{
         const { data } = await axios.get('/api/colleges');
         const collegeFilter = document.getElementById('collegeFilter');
+        // امسح الخيارات (عدا "جميع الكليات") عند إعادة التحميل
+        collegeFilter.querySelectorAll('option:not(:first-child)').forEach(o=>o.remove());
         (data||[]).forEach(c=>{
           const opt=document.createElement('option');
           opt.value=c.name; opt.textContent=c.name;
@@ -332,7 +325,8 @@
     /* ===== تطبيق رؤية الأعمدة ===== */
     function applyColumnVisibility(){
       const showCollege=document.getElementById('toggle_college').checked;
-      document.querySelectorAll('.col-college').forEach(el=>el.classList.toggle('hidden-col',!showCollege));
+      document.querySelectorAll('.col-college, td.col-college').forEach(el=>el.classList.toggle('hidden-col',!showCollege));
+
       const showDate=document.getElementById('toggle_date').checked;
       document.querySelectorAll('.date-col').forEach(el=>el.classList.toggle('hidden-col',!showDate));
 
@@ -343,11 +337,11 @@
         if(th) th.classList.toggle('hidden-col', !show);
       });
 
-      /* منطق إخفاء/إظهار عمود الملاحظات */
+      // إخفاء/إظهار عمود الملاحظات لو لم توجد أعمدة رقمية ظاهرة
       const hideNotes = savedVisibleColumns.length === 0;
       const notesHeader = document.querySelector('#evaluationsTableWrapper th.col-notes');
       if (notesHeader) notesHeader.classList.toggle('hidden-col', hideNotes);
-      document.querySelectorAll('#evaluationsTableWrapper td[data-notes-col]').forEach(td=>{
+      document.querySelectorAll('#evaluationsTableWrapper td[data-notes-col], #evaluationsTableWrapper td[col-notes]').forEach(td=>{
         td.classList.toggle('hidden-col', hideNotes);
       });
 
@@ -355,20 +349,23 @@
       updateAvailabilityHeader();
       updateCompletionAndCounts();
     }
-    document.querySelectorAll('.simple-toggle').forEach(cb=>cb.addEventListener('change', applyColumnVisibility));
+
+    document.querySelectorAll('.simple-toggle').forEach(cb=>{
+      cb.addEventListener('change', applyColumnVisibility);
+    });
 
     /* ===== البحث باسم اللجنة ===== */
     function applyCommitteeSearch(){
       const term=document.getElementById('committeeSearch').value.trim().toLowerCase();
       document.querySelectorAll('#committeesTable tr').forEach(row=>{
-        const name=row.cells[2]?.innerText.trim().toLowerCase()||'';
+        const name=row.querySelector('td.col-committee')?.innerText.trim().toLowerCase()||'';
         row.style.display = name.includes(term)? '': 'none';
       });
       updateCompletionAndCounts();
     }
     document.getElementById('committeeSearch').addEventListener('input', applyCommitteeSearch);
 
-    /* ===== تحميل الإعدادات (تشمل publishResults) ===== */
+    /* ===== تحميل الإعدادات ===== */
     async function loadSettings(){
       const semesterEl=document.getElementById('semesterInfo');
       const visitsEl  =document.getElementById('selectedVisitsContainer');
@@ -386,6 +383,7 @@
           return false;
         }
 
+        // مفعّل => إظهار الصفحة وإخفاء الرسالة
         na.classList.add('d-none'); na.classList.remove('d-flex');
         pc.classList.remove('d-none');
 
@@ -402,6 +400,7 @@
 
         return true;
       }catch(e){
+        // في حالة الخطأ نتصرف كأن النشر غير مفعّل (أكثر أمانًا)
         na.classList.remove('d-none'); na.classList.add('d-flex');
         pc.classList.add('d-none');
         return false;
@@ -431,8 +430,10 @@
           return;
         }
 
+        // ترتيب افتراضي حسب الكلية
         arr.sort((a,b)=>(a.college||'').localeCompare(b.college||'','ar'));
 
+        // رسم الصفوف
         arr.forEach((c,idx)=>{
           const tr=document.createElement('tr');
           const dateTxt = c.audit_date ? new Date(c.audit_date).toLocaleDateString('ar-EG'): '-';
@@ -440,31 +441,29 @@
           const hasNotes  = !!notesHtml && notesHtml!=='<p><br></p>' && notesHtml!=='<br>';
 
           tr.innerHTML = `
-            <td>${idx+1}</td>
+            <td class="col-idx">${idx+1}</td>
             <td class="col-college">${c.college??''}</td>
-            <td>${c.committee_name??''}</td>
-            <td class="date-col hidden-col">${dateTxt}</td>
-            <td data-field="formation_decision">${c.formation_decision ?? 0}</td>
-            <td data-field="work_plan">${c.work_plan ?? 0}</td>
-            <td data-field="performance_indicators">${c.performance_indicators ?? 0}</td>
-            <td data-field="meetings">${c.meetings ?? 0}</td>
-            <td data-field="consistency">${c.consistency ?? 0}</td>
-            <td data-field="coverage_books">${c.coverage_books ?? 0}</td>
-            <td data-field="report1">${c.report1 ?? 0}</td>
-            <td data-field="report2">${c.report2 ?? 0}</td>
-            <td data-field="report3">${c.report3 ?? 0}</td>
-            <td data-field="statistical_analysis">${c.statistical_analysis ?? 0}</td>
-            <td class="availability-cell">${c.availability_score ?? 0}</td>
-            <td data-notes-col>
+            <td class="col-committee">${c.committee_name??''}</td>
+            <td class="date-col col-date hidden-col">${dateTxt}</td>
+            <td class="col-num" data-field="formation_decision">${c.formation_decision ?? 0}</td>
+            <td class="col-num" data-field="work_plan">${c.work_plan ?? 0}</td>
+            <td class="col-num" data-field="performance_indicators">${c.performance_indicators ?? 0}</td>
+            <td class="col-num" data-field="meetings">${c.meetings ?? 0}</td>
+            <td class="col-consistency" data-field="consistency">${c.consistency ?? 0}</td>
+            <td class="col-num" data-field="coverage_books">${c.coverage_books ?? 0}</td>
+            <td class="col-num" data-field="report1">${c.report1 ?? 0}</td>
+            <td class="col-num" data-field="report2">${c.report2 ?? 0}</td>
+            <td class="col-num" data-field="report3">${c.report3 ?? 0}</td>
+            <td class="col-num" data-field="statistical_analysis">${c.statistical_analysis ?? 0}</td>
+            <td class="col-num availability-cell">${c.availability_score ?? 0}</td>
+            <td col-notes data-notes-col>
               <span class="notes-screen">
-                ${ hasNotes
-                    ? `<button class="btn btn-sm btn-info" title="عرض الملاحظات" data-notes="1">🔍</button>`
-                    : '<span class="text-muted">لا توجد ملاحظات</span>' }
+                ${ hasNotes ? `<button class="btn btn-sm btn-info" title="عرض الملاحظات" data-notes="1">🔍</button>` : '<span class="text-muted">لا توجد ملاحظات</span>' }
               </span>
               <div class="print-notes">${hasNotes ? sanitizeNotes(notesHtml) : '—'}</div>
             </td>
           `;
-
+          // زر عرض الملاحظات (شاشة فقط)
           const btn = tr.querySelector('[data-notes]');
           if(btn){
             btn.addEventListener('click',()=>{
@@ -487,7 +486,7 @@
     }
 
     /* ===== طباعة ===== */
-    document.getElementById('printBtn').addEventListener('click', ()=>{
+    document.getElementById('printBtn').addEventListener('click', ()=> {
       updateCompletionAndCounts();
       window.print();
     });
@@ -505,11 +504,7 @@
       }
     });
 
-    /* ===== تشغيل أولي =====
-       1) قراءة الإعدادات لتحديد publishResults
-       2) إذا مفعّل: نحمّل القوائم ثم الجدول
-       3) إنهاء شاشة التحميل دائمًا في النهاية
-    */
+    /* ===== تشغيل أولي مع شاشة التحميل ===== */
     (async function init(){
       try{
         const ok = await loadSettings();
@@ -517,8 +512,8 @@
           await loadOptions();
           await loadCommittees();
         }
-      } finally {
-        // إنهاء شاشة "جاري التحميل…" وإظهار ما يلزم (محتوى/رسالة غير متوفر)
+      }finally{
+        // إنهاء شاشة التحميل بغضّ النظر عن الحالة
         document.documentElement.classList.remove('app-loading');
         document.documentElement.classList.add('app-ready');
       }
