--- a/public/evaluations_dashboard.html
+++ b/public/evaluations_dashboard.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <title>نتائج تقييم اللجان</title>
   <meta name="viewport" content="width=device-width,initial-scale=1" />
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.rtl.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css">
 
-  <!-- نُفعّل حالة التحميل مبكرًا -->
+  <!-- نفعل حالة التحميل مبكرًا -->
   <script>document.documentElement.classList.add('app-loading');</script>
 
   <style>
@@ -28,17 +29,26 @@
     table{background:#fff;border-radius:10px;overflow:hidden;font-size:14px;width:100%;margin:auto}
     th,td{text-align:center;vertical-align:middle}
     th{background:#f8f9fa;color:#000;font-weight:700}
+
+    /* منع تكسّر الحروف العربية في عناوين الأعمدة */
+    #evaluationsTableWrapper thead th{
+      white-space: normal;
+      word-break: keep-all;       /* لا تكسر الحروف مفردة */
+      overflow-wrap: anywhere;    /* اسمح بالالتفاف عند الحاجة */
+      writing-mode: horizontal-tb; text-orientation: mixed;
+    }
+
     .highlight{background:#d4edda!important;transition:background-color 1s ease}
     .hidden-col{display:none!important}
     .filters{margin-bottom:20px;text-align:center}
     .sticky-header{background:#f8f9fa;padding-top:10px}
 
-    /* ترويسة لاصقة + ارتفاع أكبر مثل صفحة الإدارة */
+    /* ===== ترويسة لاصقة + ارتفاع أكبر (مطابق لصفحة الإدارة) ===== */
     #evaluationsTableWrapper thead{position:sticky;top:0;z-index:99;background:#f8f9fa}
     #evaluationsTableWrapper thead th{
       position:sticky; top:0; z-index:100; background:#f8f9fa; color:#000;
       box-shadow:0 1px 0 rgba(0,0,0,.06);
-      padding-block: .85rem;           /* ↑ ارتفاع العناوين (شاشة) */
+      padding-block: 1rem;        /* ↑ ارتفاع أكبر للرأس على الشاشة */
       line-height:1.25;
     }
 
@@ -65,7 +75,7 @@
     /* رسالة "غير متوفر" */
     #notAvailable{min-height:60vh; align-items:center; justify-content:center; text-align:center;}
 
-    /* ==== تعيين أصناف عرض للأعمدة للنِسب (شاشة + طباعة) ==== */
+    /* ==== نسب عرض للأعمدة (شاشة + طباعة) ==== */
     th.col-idx, td.col-idx{width:3.5%}
     th.col-college, td.col-college{width:9%}
     th.col-committee, td.col-committee{width:20%}            /* اسم اللجنة */
@@ -77,18 +87,22 @@
 
     /* ================= الطباعة ================= */
     @media print{
-      @page{ size: A4 landscape; margin: 5mm; }
+      @page{ size: A4 landscape; margin: 4mm; } /* هوامش أصغر جدًا */
 
       html,body{background:#fff}
       .no-print,.toast-container,.modal{display:none!important}
       .container-fluid{margin-top:0; max-width:none; width:100%}
-      .print-header{display:block;margin-bottom:8px}
+      .print-header{display:block;margin-bottom:6px}
 
-      /* استخدم تخطيط ثابت ليلتزم بعروض الأعمدة */
+      /* تخطيط ثابت ليلتزم بعروض الأعمدة */
       #evaluationsTableWrapper{ table-layout: fixed; width:100%; }
+      #evaluationsTableWrapper thead th{
+        padding-block: .6rem;        /* رأس أقل ارتفاعًا في الطباعة */
+        font-size:12px;
+      }
       #evaluationsTableWrapper th, #evaluationsTableWrapper td{
         font-size:12px; padding:.35rem .25rem; line-height:1.25;
-        white-space:normal; overflow-wrap:anywhere; word-break:break-word;
+        white-space:normal; overflow-wrap:anywhere; word-break:keep-all;
         writing-mode: horizontal-tb !important; text-orientation: mixed !important;
       }
 
